--- a/LocationTracker/AppShell.xaml
+++ b/LocationTracker/AppShell.xaml
@@ -4,11 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:LocationTracker.Views"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Flyout">
 
     <ShellContent
         Title="Tracking"
         ContentTemplate="{DataTemplate views:TrackingView}"
         Route="TrackingView" />
-
+    <ShellContent Title="History"
+        ContentTemplate="{DataTemplate views:HistoryView}"
+        Route="HistoryView" />
 </Shell>
